# data-pipeline-template

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
data/: raw_sample.csv  sample.csv
data_pipeline/: __init__.py  cleaner.py  loader.py  pipeline.py  validator.py
src/: pipeline.py
tests/: test_pipeline.py
